# VoiceFlow

./: .gitignore  API_DOCUMENTATION.md  FLOW_DOCUMENTATION.md  LICENSE  README.md  SIMPLIFIED_API_DOCUMENTATION.md  docker-compose.yaml  main.py
client-library/: LICENSE  QUICKSTART.md  README.md  integration_test.py  pyproject.toml  test_synthesis_formats.py  validate_refactor.py
client-library/examples/: async_usage.py  basic_usage.py  batch_processing.py  error_handling.py  synthesis_formats_example.py
client-library/tests/: test_client.py
client-library/voiceflow/: __init__.py  async_client.py  client.py  models.py  utils.py
services/api-gateway/: Dockerfile  main.py
services/cleanup-worker/: Dockerfile  main.py
services/demo-ui/: Dockerfile  main.py  main_simple.py  main_test.py
services/inference-service/: Dockerfile
services/inference-service/model_repository/chatterbox/: config.pbtxt
services/inference-service/model_repository/chatterbox/1/: model.py
services/inference-service/model_repository/whisper/: config.pbtxt
services/inference-service/model_repository/whisper/1/: model.py
services/orchestrator/: Dockerfile  tasks.py
services/stt-service/: Dockerfile  main.py
services/tts-service/: Dockerfile  main.py
shared/: setup.py
shared/shared/: models.py
