[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceflow-client"
version = "1.0.0"
description = "Python client library for VoiceFlow API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "VoiceFlow Team"},
]
keywords = ["voice", "audio", "transcription", "synthesis", "speech", "tts", "stt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "httpx>=0.24.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.22.0",
    "black>=22.0",
    "isort>=5.10",
    "mypy>=1.0",
]

[project.urls]
"Homepage" = "https://github.com/voiceflow/voiceflow"
"Bug Reports" = "https://github.com/voiceflow/voiceflow/issues"
"Source" = "https://github.com/voiceflow/voiceflow"

[tool.setuptools.packages.find]
where = ["."]
include = ["voiceflow*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
